--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorAccent">#9cff57</color>
     <color name="colorPrimaryDark">#1faa00</color>
     <color name="colorBackground">#F8FEF2</color>
+    <color name="colorButton">#98FB98</color>
 </resources>
