--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/imgLogo"
         app:layout_constraintVertical_bias="0.235"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -28,18 +28,18 @@
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgLogo"
         android:layout_width="562dp"
         android:layout_height="135dp"
         android:layout_weight="0.25"
         app:srcCompat="@mipmap/ic_launcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/EnregistrerButton"
+        app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
         android:layout_marginBottom="189dp" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/btnLogin"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="0dp"
         android:layout_height="74dp"
@@ -58,7 +58,7 @@
         app:layout_constraintVertical_bias="0.544" />
 
     <Button
-        android:id="@+id/EnregistrerButton"
+        android:id="@+id/btnRegister"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="0dp"
         android:layout_height="39dp"
@@ -73,5 +73,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 </android.support.constraint.ConstraintLayout>
