--- a/app/src/main/res/layout/activity_town.xml
+++ b/app/src/main/res/layout/activity_town.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayoutCantons"
+    android:id="@+id/linearLayoutTowns"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.daniel.bikesharing.CantonActivity">
+    tools:context="com.example.daniel.bikesharing.PlaceActivity">
 
     <LinearLayout
         android:id="@+id/linearLayoutHeader"
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
             android:layout_weight="1"
-            android:background="@color/colorButton"
+            android:background="@color/colorBackground"
             android:text="@string/cantons"
             tools:ignore="ButtonStyle"
             style="?android:attr/borderlessButtonStyle" />
@@ -38,7 +38,7 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:layout_weight="1"
-            android:background="@color/colorBackground"
+            android:background="@color/colorButton"
             android:text="@string/villes"
             tools:ignore="ButtonStyle"
             style="?android:attr/borderlessButtonStyle" />
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader">
 
         <ListView
-            android:id="@+id/listCantons"
+            android:id="@+id/listTowns"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@color/colorPrimaryDark"
