--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.daniel.bikesharing.Objects.ProfileActivity">
+    tools:context="com.example.daniel.bikesharing.ProfileActivity">
 
     <LinearLayout
         android:layout_width="368dp"
