--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorPrimaryDark">#1faa00</color>
     <color name="colorBackground">#F8FEF2</color>
     <color name="colorButton">#98FB98</color>
+    <color name="QRCodeBlackColor">#000000</color>
+    <color name="QRCodeWhiteColor">#FFFFFF</color>
 </resources>
