--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,71 +9,58 @@
 
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/txtTitle"
         android:layout_width="0dp"
-        android:layout_height="37dp"
-        android:layout_weight="0.06"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Bike Sharing"
         android:textAlignment="center"
         android:textSize="30sp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imgLogo"
-        app:layout_constraintVertical_bias="0.488"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="562dp"
-        android:layout_height="135dp"
-        android:layout_weight="0.25"
+        android:layout_width="561dp"
+        android:layout_height="137dp"
+        android:layout_marginTop="32sp"
         app:srcCompat="@mipmap/ic_launcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
-        android:layout_marginBottom="224dp"
-        app:layout_constraintHorizontal_bias="0.503" />
+        app:layout_constraintTop_toBottomOf="@id/txtTitle" />
 
     <Button
         android:id="@+id/btnLogin"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="0dp"
-        android:layout_height="74dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_weight="0.14"
+        android:layout_marginTop="64dp"
         android:background="@color/colorButton"
-        android:elevation="0dp"
         android:text="Login"
         android:textSize="36sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.542" />
+        app:layout_constraintTop_toBottomOf="@id/imgLogo" />
 
     <Button
         android:id="@+id/btnRegister"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="0dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
+        android:layout_marginTop="32dp"
         android:background="@color/colorButton"
         android:text="S'enregistrer"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+        app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 </android.support.constraint.ConstraintLayout>
