--- a/app/src/main/res/layout/list_user.xml
+++ b/app/src/main/res/layout/list_user.xml
@@ -12,7 +12,7 @@
         android:layout_width="238dp"
         android:layout_height="50dp"
         android:layout_weight="316.52"
-        android:text="User"
+        android:text="@string/user"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="-12dp" />
 
@@ -24,7 +24,9 @@
         app:srcCompat="@drawable/list"
         app:layout_constraintRight_toLeftOf="@+id/imgadmin"
         android:layout_marginRight="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="ContentDescription,RtlHardcoded"
+        android:contentDescription="" />
 
     <ImageButton
         android:id="@+id/imgadmin"
@@ -34,7 +36,8 @@
         app:srcCompat="@drawable/admin"
         tools:layout_editor_absoluteY="0dp"
         app:layout_constraintRight_toLeftOf="@+id/imgdelete"
-        android:layout_marginRight="0dp" />
+        android:layout_marginRight="0dp"
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <ImageButton
         android:id="@+id/imgdelete"
@@ -44,6 +47,7 @@
         app:srcCompat="@drawable/delete"
         tools:layout_editor_absoluteY="0dp"
         android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
 </android.support.constraint.ConstraintLayout>
