--- a/app/src/main/res/drawable/button_enabled.xml
+++ b/app/src/main/res/drawable/button_enabled.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
-        android:startColor="@color/colorButton"
-        android:centerColor="@color/colorPrimary"
-        android:endColor="@color/colorButton"
+        android:startColor="@color/colorBackground"
+        android:centerColor="@color/colorButton"
+        android:endColor="@color/colorBackground"
         android:angle="90"/>
     <padding android:left="16dp"
         android:top="8dp"
