--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="8sp"
-    android:layout_marginLeft="8sp"
-    android:layout_marginRight="8sp"
+    android:layout_marginTop="8dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="8dp"
     android:background="#FFFFFF"
     tools:context="com.example.daniel.bikesharing.QRCodeActivity">
 
@@ -13,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imgCode"
-        android:layout_gravity="center"
-        android:layout_marginTop="8sp" />
+        android:layout_gravity="center" />
 
 </RelativeLayout>
