--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,86 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.daniel.bikesharing.ProfileActivity">
+    android:background="#FFF"
+    tools:context="com.example.daniel.bikesharing.RegisterActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="366dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/linearLayoutProfile"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/linearLayout"
-        android:weightSum="1">
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp">
 
         <EditText
-            android:id="@+id/editText7"
+            android:id="@+id/txtRegisterLastname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Nom" />
+            android:hint="Nom" />
 
         <EditText
-            android:id="@+id/editText6"
+            android:id="@+id/txtRegisterFirstname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Prénom" />
+            android:hint="Prénom" />
 
         <EditText
-            android:id="@+id/editText10"
+            android:id="@+id/txtRegisterEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textEmailAddress"
-            android:text="E-Mail" />
+            android:hint="E-Mail" />
 
         <EditText
-            android:id="@+id/editText11"
+            android:id="@+id/txtRegisterAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Adresse" />
+            android:hint="Adresse" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinRegisterTown"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.38" />
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:spinnerMode="dialog" />
 
         <EditText
-            android:id="@+id/editText8"
+            android:id="@+id/txtRegisterPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:fontFamily="none"
             android:inputType="textPassword"
-            android:text="Mot de passe" />
+            android:hint="Mot de passe" />
 
         <EditText
-            android:id="@+id/editText9"
+            android:id="@+id/txtRegisterConfPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text"
-            android:text="Confirmer mot de passe" />
+            android:fontFamily="none"
+            android:inputType="textPassword"
+            android:hint="Confirmer mot de passe" />
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="368dp"
+        android:id="@+id/btnRegisterValidate"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorButton"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:text="Valider"
+        android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutProfile" />
 
 </android.support.constraint.ConstraintLayout>
