--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -6,50 +6,70 @@
     android:layout_height="match_parent"
     tools:context="com.example.daniel.bikesharing.AdminHomeActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="375dp"
-        android:layout_height="35dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/administration"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolAdminHome"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:title="@string/bike_sharing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
-        android:layout_width="365dp"
-        android:layout_height="413dp"
+        android:id="@+id/linearLayoutAdmin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:weightSum="1">
+        app:layout_constraintTop_toBottomOf="@+id/toolAdminHome">
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/btnAdminSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/rechercher" />
+            android:text="@string/rechercher"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@color/colorBackground"/>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnAdminUsers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@color/colorBackground"
             android:text="@string/utilisateurs" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnAdminPlaces"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@color/colorBackground"
+            android:text="Places" />
+
+        <Button
+            android:id="@+id/btnAdminStats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:background="@color/colorBackground"
             android:text="@string/statistiques" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
