--- a/app/src/main/res/layout/activity_admin_places.xml
+++ b/app/src/main/res/layout/activity_admin_places.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    tools:context="com.example.daniel.bikesharing.AdminUsersActivity">
+    android:orientation="vertical"
+    tools:context="com.example.daniel.bikesharing.AdminPlacesActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolAdminUsers"
+        android:id="@+id/toolAdminPlaces"
         android:minHeight="?attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:title="@string/bike_sharing"
@@ -16,26 +16,38 @@
         android:layout_height="wrap_content">
     </android.support.v7.widget.Toolbar>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatBtnAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:tint="#fff"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:src="@android:drawable/ic_input_add"
+        android:scaleType="centerInside"/>
+
     <LinearLayout
+        android:id="@+id/linearLayoutPlaces"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_below="@+id/toolAdminUsers"
+        android:layout_below="@id/toolAdminPlaces"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolAdminUsers">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ListView
-            android:id="@+id/listUsers"
+            android:id="@+id/listAdminPlaces"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:divider="@color/colorPrimaryDark"
             android:dividerHeight="1dp">
         </ListView>
-
     </LinearLayout>
-
 </RelativeLayout>
