--- a/app/src/main/res/layout/list_simple.xml
+++ b/app/src/main/res/layout/list_simple.xml
@@ -5,11 +5,11 @@
 
     <Button
         android:id="@+id/btnText"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:clickable="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff" />
+        android:background="#fff"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false" />
 
 </LinearLayout>
