--- a/app/src/main/res/menu/settings.xml
+++ b/app/src/main/res/menu/settings.xml
@@ -4,10 +4,10 @@
 
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"/>
-      <!--  app:showAsAction="never"-->
+        android:title="@string/action_settings"
+        app:showAsAction="never"/>
 
     <item
-        android:id="@id/action_logout"
+        android:id="@+id/action_logout"
         android:title="@string/action_logout" />
 </menu>
