--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:ems="12"
         android:inputType="textEmailAddress"
-        android:hint="Adresse mail"
+        android:hint="@string/adresse_mail"
         android:layout_marginTop="128dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:ems="12"
         android:inputType="textPassword"
-        android:hint="Mot de passe"
+        android:hint="@string/mot_de_passe"
         android:fontFamily="none"
         android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="64dp"
         android:background="@color/colorButton"
-        android:text="Valider"
+        android:text="@string/valider"
         android:textSize="24sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@color/colorBackground"
-        android:text="Mot de passe oublié ?"
+        android:text="@string/mot_de_passe_oubli"
         android:paddingTop="0dp"
         android:paddingBottom="0dp"
         android:paddingLeft="8dp"
