--- a/app/src/main/res/layout/activity_canton.xml
+++ b/app/src/main/res/layout/activity_canton.xml
@@ -61,6 +61,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_below="@+id/linearLayoutHeader"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
