--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.daniel.bikesharing.RegisterActivity">
 
     <LinearLayout
-        android:id="@+id/linearLayoutProfile"
+        android:id="@+id/linearLayoutRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
