--- a/app/src/main/res/layout/activity_admin_places.xml
+++ b/app/src/main/res/layout/activity_admin_places.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:src="@android:drawable/ic_input_add"
-        android:scaleType="centerInside"/>
+        android:scaleType="center"/>
 
     <LinearLayout
         android:id="@+id/linearLayoutPlaces"
