--- a/app/src/main/res/layout/activity_place_infos.xml
+++ b/app/src/main/res/layout/activity_place_infos.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.daniel.bikesharing.InfosPlaceActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolInfosPlace"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:title="@string/bike_sharing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.Toolbar>
+
     <TextView
         android:id="@+id/txtPlaceName"
         android:layout_width="wrap_content"
