--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,6 +8,15 @@
     android:orientation="vertical"
     tools:context="com.example.daniel.bikesharing.SearchActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolSearch"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:title="@string/bike_sharing"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.Toolbar>
+
     <LinearLayout
         android:id="@+id/linearLayoutHeader"
         android:layout_width="match_parent"
@@ -16,8 +25,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_below="@+id/toolSearch"
         tools:ignore="RtlHardcoded"
         android:onClick="displayCantons">
 
