--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-smallcaps"
-                android:text="Bike Sharing"
+                android:text="@string/bike_sharingTitle"
                 android:textAlignment="center"
                 android:textSize="32sp"
                 android:layout_marginTop="64dp"
@@ -41,7 +41,8 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtTitle"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@mipmap/ic_launcher"
+                tools:ignore="HardcodedText" />
 
             <Button
                 android:id="@+id/btnLogin"
@@ -51,7 +52,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="64dp"
                 android:background="@color/colorButton"
-                android:text="Login"
+                android:text="@string/login"
                 android:textSize="24sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -67,7 +68,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:background="@color/colorBackground"
-                android:text="S'enregistrer"
+                android:text="@string/s_enregistrer"
                 android:textSize="18sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
