--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +30,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="167dp"
-        android:id="@+id/imageView2" />
+        android:id="@+id/imageView2"
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <ImageView
         android:layout_width="55dp"
@@ -39,7 +41,8 @@
         android:layout_marginLeft="82dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="163dp"
-        android:id="@+id/imageView3" />
+        android:id="@+id/imageView3"
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <ImageView
         android:layout_width="49dp"
@@ -48,42 +51,46 @@
         app:layout_constraintLeft_toRightOf="@+id/imageView3"
         android:layout_marginLeft="74dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="163dp" />
+        android:layout_marginTop="163dp"
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <Button
         android:id="@+id/FR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FRANCAIS"
+        android:text="@string/francais"
         android:onClick="changeToFR"
         app:layout_constraintLeft_toRightOf="@+id/ENG"
         android:layout_marginLeft="40dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="217dp" />
+        android:layout_marginTop="217dp"
+        tools:ignore="RtlHardcoded" />
 
 
     <Button
         android:id="@+id/ALL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deutsch"
+        android:text="@string/german"
         android:onClick="changeToALL"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="217dp" />
+        android:layout_marginTop="217dp"
+        tools:ignore="RtlHardcoded" />
 
     <Button
         android:id="@+id/ENG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:text="ENGLISH"
+        android:text="@string/english"
         android:onClick="changeToEN"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="217dp"
         app:layout_constraintLeft_toRightOf="@+id/ALL"
-        android:layout_marginLeft="44dp" />
+        android:layout_marginLeft="44dp"
+        tools:ignore="RtlHardcoded" />
 
 </android.support.constraint.ConstraintLayout>
 </LinearLayout>
