--- a/app/src/main/res/layout/activity_qrcode.xml
+++ b/app/src/main/res/layout/activity_qrcode.xml
@@ -24,6 +24,8 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:layout_below="@+id/toolQRCode"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:contentDescription=""
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
