--- a/app/src/main/res/menu/delete.xml
+++ b/app/src/main/res/menu/delete.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Delete"
+        android:title="@string/delete"
         android:id="@+id/btnDelete"
         android:icon="@drawable/ic_delete"
         android:orderInCategory="100"
