--- a/app/src/main/res/menu/edit.xml
+++ b/app/src/main/res/menu/edit.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="Edit"
+        android:title="@string/edit"
         android:id="@+id/btnEdit"
         android:icon="@drawable/ic_edit"
         android:orderInCategory="100"
