Je sais plus ce que j'ai fait

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorBackground">#C8E6C9</color>
     <color name="colorButton">#81C784</color>
     <color name="colorAccent">#00C853</color>
-    <color name="QRCodeBlackColor">#000000</color>
-    <color name="QRCodeWhiteColor">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey">#CCCCCC</color>
 </resources>
